unpackaged/main/default/objects/Trac__c/Trac__c.object-meta.xml
<CustomObject>
    <label>Tracking</label>
    <nameField>
        <displayFormat>T{YY}{MM}{DD}{0000}</displayFormat>
        <label>Tracking Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>