unpackaged/main/default/objects/Trac__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>