unpackaged/main/default/objects/Trac__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>Shipping</label>
    <referenceTo>Shipping__c</referenceTo>
    <relationshipLabel>Trackings</relationshipLabel>
    <relationshipName>Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>